[package]
name = "oal-sys"
description = "OpenAL bindings"
version = "0.0.2"
authors = ["AlexApps99 <alex.apps99@gmail.com>"]
repository = "https://github.com/AlexApps99/oal-sys"
keywords = ["openal", "oal", "sound", "audio", "openal-soft"]
categories = ["multimedia::audio", "external-ffi-bindings"]
edition = "2018"
links = "openal"
readme = "README.md"
license = "WTFPL"

[build-dependencies.bindgen]
version = "0.55.1"
optional = true

[features]
generate = ["bindgen"]
